fix: remove broken ui css

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,4 @@
   text-align: center;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
